# crazyflie-firmware-sysid

./: .gitignore  pyproject.toml
src/platform/interface/: platform_defaults_cf21bl.h
tools/system_id/: collect_data.py  loadcell.py  system_id.py  utils.py
